# Onlynews

./: CMakeLists.txt  README.md  README_MODIFIED.txt  README_NO_PYTHON.txt  main.cpp
api/: OnlyNewsAPI.cpp  httplib.h
data/: fake.txt  verified.txt
include/: EditDistance.h  NewsDetector.h  PatternMatcher.h  TextNormalizer.h  Trie.h
modules/: edit_distance.cpp  kmp.cpp  trie.cpp
src/: DatasetManager.cpp  EditDistance.cpp  NewsDetector.cpp  PatternMatcher.cpp  TextNormalizer.cpp  Trie.cpp  main.cpp
